welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: not found: type int
	var x=0:int
                ^indexOfMaxValue:8: error: type mismatch;
 found   : Unit
 required: Int
if (x==0){return 0}
^