welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var x=0:int
	for(i<- 0 to nums.length-1)
	if (nums(i)== value){
		return i
		x+=1
}
if (x==0){return 0}
}
